--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon --exec 'npm start' --ignore './database/*.json'"
+    "dev": "nodemon --exec npm start --ignore './database/*.json'"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
     "eosjs": "^22.1.0",
     "express": "^4.18.1",
     "express-jwt": "^7.6.2",
+    "handy-storage": "^2.1.6",
     "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "request": "^2.88.2",
