--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.1",
+    "dotenv": "^16.0.3",
     "eosjs": "^22.1.0",
     "express": "^4.18.1",
     "express-jwt": "^7.6.2",
@@ -37,6 +38,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Kittipob-K/aw-cloud.git"
+    "url": "https://github.com/Kittipob-K/aw-script-v3.git"
   }
 }
