--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SECRET_KEY_1="" #Generator key length 50 / ให้สร้างคีล์ขึ้นมาจำนวน 50 ตัว
 SECRET_KEY_2="" #Generator key length 25 / ให้สร้างคีล์ขึ้นมาจำนวน 25 ตัว
+SYSTEMS="local" # local or cloud / ให่เป็น local หรือ cloud
