--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@replit/database": "^2.0.2",
     "axios": "^0.27.2",
     "axios-rate-limit": "^1.3.0",
     "axios-retry": "^3.2.5",
